--- a/.github/workflows/daily_post.yml
+++ b/.github/workflows/daily_post.yml
@@ -2,7 +2,7 @@ name: Daily Auto Tweet
 
 on:
   schedule:
-    - cron: '0 14 * * *'
+    - cron: '0 14 * * *'  # Runs every day at 2 PM UTC
   workflow_dispatch:
 
 jobs:
@@ -10,32 +10,42 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout Code
+      uses: actions/checkout@v2
 
-    - name: Setup Python
+    - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: '3.9'
 
-    - name: Install dependencies
+    - name: Install Python Dependencies
       run: |
+        python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Set up Chrome
+    - name: Install Google Chrome & Chromedriver
       run: |
         sudo apt-get update
-        sudo apt-get install -y wget unzip xvfb libxi6 libgconf-2-4
+        sudo apt-get install -y wget unzip curl fonts-liberation
         wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
         sudo dpkg -i google-chrome*.deb || sudo apt-get -f install -y
-        CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+')
-        CHROMEDRIVER_VERSION=$(curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE)
+        export CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+')
+        export CHROMEDRIVER_VERSION=$(curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE)
         wget -N https://chromedriver.storage.googleapis.com/$CHROMEDRIVER_VERSION/chromedriver_linux64.zip
         unzip chromedriver_linux64.zip
         sudo mv chromedriver /usr/local/bin/chromedriver
         sudo chmod +x /usr/local/bin/chromedriver
 
+    - name: Verify Chrome Installation
+      run: |
+        which google-chrome
+        google-chrome --version
+        which chromedriver
+        chromedriver --version
+
     - name: Run Tweet Bot
       env:
         TWITTER_USERNAME: ${{ secrets.TWITTER_USERNAME }}
         TWITTER_PASSWORD: ${{ secrets.TWITTER_PASSWORD }}
-      run: python tweet_bot/main.py
+      run: |
+        xvfb-run --auto-servernum python tweet_bot/main.py
