--- a/.github/workflows/daily_post.yml
+++ b/.github/workflows/daily_post.yml
@@ -29,7 +29,6 @@ jobs:
         sudo apt-get install -y wget unzip curl fonts-liberation
         wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
         sudo dpkg -i google-chrome*.deb || sudo apt-get -f install -y
-        export CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+')
         export CHROMEDRIVER_VERSION=$(curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE)
         wget -N https://chromedriver.storage.googleapis.com/$CHROMEDRIVER_VERSION/chromedriver_linux64.zip
         unzip chromedriver_linux64.zip
@@ -48,4 +47,4 @@ jobs:
         TWITTER_USERNAME: ${{ secrets.TWITTER_USERNAME }}
         TWITTER_PASSWORD: ${{ secrets.TWITTER_PASSWORD }}
       run: |
-        xvfb-run --auto-servernum python tweet_bot/main.py
+        xvfb-run --auto-servernum python main.py
